--- a/JavaScript Basics.html
+++ b/JavaScript Basics.html
@@ -13,7 +13,7 @@
           <a href="https://www.w3schools.com/js/js_variables.asp">
           <p>Home
             <ul class = "a">
-              <li>JavaScript Overview
+              <li>JavaScript Overview YAY
                 <ul class = "b" >
                   <li>Variable Declaration</li>
                   <li>Variable Assignment</li>
